# prosell-sass

./: .continue-here-staging-debugging.md  .dockerignore  .env.example  .env.prod.example  .env.production.example  .env.staging  .env.staging.example  .gga  .gitignore  .graphifyignore  .npmrc  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CONTINUE-HERE.md  DEPLOY.md  HANDOFF-RELEASE.md  HANDOFF.md  INITIAL.md  MIGRATION_TEST_REPORT.md  Makefile  README.md  SPEC.md  SPRINT_1_2_VALIDACION_ACTUALIZADA.md  SPRINT_1_2_VALIDACION_FINAL.md  TESTING.md  TODO-CLEANUP-SUMMARY.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  skills-lock.json  turbo.json
apps/api/: .env.oauth.example  .env.test.example  .gga  =0.1.9  alembic.ini  conftest.py  conftest.pyi  mypy-baseline.txt  package.json  pyproject.toml  pytest.ini  test-optimization-direct.py  worker.py
apps/api/.planning/: STAGING-DEPLOYMENT-HANDOFF.md
apps/api/.planning/inventory-mvp-debugging/: .continue-here.md
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260206_1942-d1823b89fecb_initial_schema_with_users_roles_.py  20260222_0000-2a3b4c5d6e7f_organizations_teams_wallet_schema.py  20260301_0000-convert_string_ids_to_uuid.py  20260301_2117-57b3e7cdea3c_convert_oauth_accounts_sessions_user_.py  20260304_1200-b4c5d6e7f8a0_sprint5_6_products_categories_vehicles.py  20260306_1200-c1d2e3f4g5h6_facebook_marketplace_oauth.py  20260315_1200-d2e3f4g5h6i7_add_publications_table.py  20260322_1720_initial_uuid_schema.py  20260324_0828-20f24e79033e_recreate_users_table_complete.py  20260324_2057-83586f56fb82_remove_facebook_page_fk.py  20260324_2102-17d9ed732cf9_complete_publications_table.py  20260329_0825-a546709840eb_add_dealers_table.py  20260329_1500-add_user_dealers_table.py  20260404_1400-abc123def456_create_organizations_table.py  20260404_1429-094a57cf7b48_add_missing_tables_vehicles_products_.py  20260404_1810-504440751584_merge_vehicle_products_with_user_dealers.py  20260407_0234-1e5447840509_add_vehicles_categories_product_images_.py  20260407_0235-abc123def456_final_missing_tables.py  20260410_0000-c3_schema_jsonb_upgrade.py  20260427_2036-lead_tables_create.py  20260428_1625-create_appointments_table.py  20260505_0805-add_gin_index_to_products_attributes.py  20260505_1345-drop_vehicles_table.py  20260507_2101-b53d13201dcb_rename_vehicle_id_to_product_id_in_.py  20260507_2200-a1b2c3d4e5f6_rename_dealers_to_branches.py  20260507_2300-c7d8e9f0a1b2_rename_appointments_branch_id_to_user_id.py  20260508_0000-xyz987_create_teams_table.py  20260514_1900-d8e7f0a1b2c3_add_team_invitations_table.py  20260519_1000-e1f2a3b4c5d6_add_notifications_table.py  20260519_1100-f2a3b4c5d6e7_add_setup_complete_to_organizations.py  20260523_1728-d3e8ca98ee2b_create_facebook_accounts_and_pages_.py  20260601_recreate_facebook_tables.py  20260602_0000-xyzabc123456_add_image_urls_to_product.py  20260606_0000-add_cover_image_key_to_product.py  20260606_2030-a4d7a394211c_add_category_presentation.py  20260606_2130-ac4b1ad9593e_global_categories_tenant_id_nullable_.py  20260608_1400-a7b8c9d0e1f2_rename_user_branches_dealer_id.py  20260608_1410-b8c9d0e1f2a3_branches_settings_jsonb.py  20260608_1420-c9d0e1f2a3b4_appointments_product_id_fk.py  20260608_1430-d0e1f2a3b4c5_branches_timestamps_tz_aware.py  (+23 more)
apps/api/keys/: README.md  private.pem  public.pem
apps/api/scripts/: MIGRATE_VEHICLES_README.md  MIGRATION_SUMMARY.md  QUICK_START_MIGRATION.md  alembic-migrations.sh  audit_schema_drift.py  create_test_schema.py  fix_image_urls_keys.py  init-db.py  init_data.py  migrate_vehicles_to_product_attributes.py  seed.py  seed_dev.py  seed_test_vehicles.py  test_data_cleanup.py  test_password_verify.py  verify_endpoint_coverage.py  verify_login.sh  verify_request_dtos_openapi.py  verify_response_dtos_openapi.py  verify_status_codes.py  verify_validation_rules.py  verify_vehicle_migration.py
apps/api/src/prosell/: __init__.py
apps/api/src/prosell/core/: __init__.py  config.py
apps/api/src/prosell/domain/: __init__.py  base.py
apps/api/src/prosell/infrastructure/: __init__.py
apps/api/src/prosell/scripts/: __init__.py  deactivate_non_vehicle_categories.py
apps/api/tests/: conftest.py
apps/api/tests/contract/integration/: test_vin_decode_contract.py
apps/api/tests/contract/openapi/: test_organizations_schema.py  test_webhooks_schema.py
apps/api/tests/contract/schema_matching/: test_appointment_dto_schemas.py  test_lead_dto_schemas.py  test_team_dto_schemas.py  test_vehicle_dto_matching.py
apps/api/tests/integration/: _constants.py  conftest.py  conftest.py.backup  test_facebook_oauth_integration.py  test_facebook_webhook.py  test_facebook_webhook_e2e.py  test_image_upload.py  test_migration_c3.py  test_oauth_callback.py  test_org_upload_url.py  test_organization_api.py  test_tenant_isolation.py
apps/api/tests/integration/api/: conftest.py  conftest.pyi  test_admin_dealers_router.py  test_admin_organizations_router.py  test_appointment_api.py  test_auth_router.py  test_branch_endpoints.py  test_category_api.py  test_category_authorization.py  test_category_create_global.py  test_category_create_role_gate.py  test_category_global_management.py  test_category_inference_router.py  test_category_schema.py  test_category_schema_auth.py  test_dealer_endpoints.py  test_dynamic_filters.py  test_featured_route.py  test_lead_api.py  test_lead_assignment_flow.py  test_org_verticals.py  test_product_c3.py  test_product_filters_api.py  test_product_list_count_filters.py  test_product_list_dealer_scope.py  test_product_marketplace_publish_gate.py  test_product_ownership_endpoint.py  (+7 more)
apps/api/tests/unit/: test_alembic_migration_chain.py  test_alembic_url_percent_escaping.py  test_category_validation.py  test_config_resend.py  test_dealer_permissions.py  test_docker_compose_config.py  test_model_onupdate_timestamps.py  test_oauth_rate_limit.py  test_oauth_service.py  test_organization_permissions.py  test_rate_limiting_config.py  test_role_based_permissions.py
apps/api/tests/utils/: test_data_manager.py
(+2104 files in other folders)
