[project]
name = "prosell-api"
version = "0.1.0"
description = "ProSell SaaS - Vehicle Market Analysis API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.128.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic==2.12.5",
    "pydantic-settings>=2.7.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "stripe>=11.0.0",
    "anthropic>=0.40.0",
    # Auth-specific dependencies
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "cryptography>=43.0.0",
    "sendgrid>=6.11.0",
    # Rate limiting
    "slowapi>=0.1.9",
    "taskiq[redis]>=0.12.1",
    "taskiq-redis>=1.2.2",
    "playwright>=1.42.0",
    "Pillow>=12.0.0",
    "facebook-sdk>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "types-boto3>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "types-redis>=4.6.0.20240425",
    "types-qrcode>=7.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prosell"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["prosell"]

[tool.ruff.lint.per-file-ignores]
# FastAPI routers use Depends() in defaults - correct pattern
"src/prosell/infrastructure/api/**/*.py" = ["B008"]
"src/prosell/infrastructure/api/dependencies.py" = ["B008"]
"src/prosell/infrastructure/api/middleware/auth_middleware.py" = ["B008"]

# Pytest fixtures injected for side effects only (e.g. dependency_overrides) are not "used"
# in the traditional sense — ARG002 is a false positive for this pattern.
"tests/integration/test_organization_api.py" = ["ARG002"]

# TODO: Fix these pre-existing issues (not part of current GGA fixes)
"src/prosell/application/use_cases/auth/reset_password.py" = ["ARG002"]
"src/prosell/application/use_cases/auth/verify_email.py" = ["ARG002"]
"src/prosell/application/use_cases/auth/verify_2fa.py" = ["SIM102"]
"src/prosell/domain/exceptions/__init__.py" = ["RUF022"]
"src/prosell/domain/exceptions/auth_exceptions.py" = ["N818"]
"src/prosell/domain/exceptions/appointment_exceptions.py" = ["N818"]
"src/prosell/domain/exceptions/lead_exceptions.py" = ["N818"]
"src/prosell/domain/value_objects/email.py" = ["RUF012"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests", "scripts"]
# scripts/ lives outside the prosell package; tell pyright where the
# package source is so `from prosell...` resolves inside scripts/.
extraPaths = ["src"]
exclude = [
    ".venv",
    "**/__pycache__",
]
# venvPath and venv are resolved from .vscode/settings.json when running in VS Code.
# When running from CLI (pre-commit, CI): uv run pyright uses the venv automatically.
